修正bug，人员分页，采购付款审批附件预览

--- a/Web/Web.config
+++ b/Web/Web.config
@@ -61,7 +61,7 @@
     <sessionState mode="StateServer" timeout="20" stateConnectionString="tcpip=127.0.0.1:42424" stateNetworkTimeout="15" />
   </system.web>
   <connectionStrings>
-    <!--<add name="ora8" connectionString="User ID=TCSYS;pwd=TCSYS;Data Source=TCSYS136;Persist Security Info=False;" providerName="System.Data.OracleClient"/>-->
+    <!--<add name="ora8" connectionString="User ID=TCSYS;pwd=TCSYS;Data Source=CreateErpServer;Persist Security Info=False;" providerName="System.Data.OracleClient"/>-->
     <!--<add name="ora8" connectionString="User ID=tc;pwd=tc;Data Source=cuixx;Persist Security Info=False;" providerName="System.Data.OracleClient" />-->
     <!--<add name="sqlStr" connectionString="server=192.168.118.4;database=CreateErp;user=sa;pwd=sa;" providerName="System.Data.SqlClient" />-->
     <add name="sqlStr" connectionString="Data Source=.;Initial Catalog=CreateErp;user=sa;pwd=sa;" providerName="System.Data.SqlClient" />
