--- a/Web/Web.config
+++ b/Web/Web.config
@@ -64,7 +64,7 @@
     <!--<add name="ora8" connectionString="User ID=TCSYS;pwd=TCSYS;Data Source=CreateErpServer;Persist Security Info=False;" providerName="System.Data.OracleClient"/>-->
     <!--<add name="ora8" connectionString="User ID=tc;pwd=tc;Data Source=cuixx;Persist Security Info=False;" providerName="System.Data.OracleClient" />-->
     <!--<add name="sqlStr" connectionString="server=192.168.118.4;database=CreateErp;user=sa;pwd=sa;" providerName="System.Data.SqlClient" />-->
-    <add name="sqlStr" connectionString="Data Source=.;Initial Catalog=CreateErp;user=sa;pwd=sa;" providerName="System.Data.SqlClient" />
+    <add name="sqlStr" connectionString="Data Source=.;Initial Catalog=CreateErp;user=sa;pwd=sa123456;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <!--IIS集成模式(webServer)-->
   <!--<system.webServer>
