--- a/DCIS.TC.Business/TCEPORT.TC.Business.csproj
+++ b/DCIS.TC.Business/TCEPORT.TC.Business.csproj
@@ -66,6 +66,7 @@
     <Compile Include="CommonPay_BLL.cs" />
     <Compile Include="Common\SqlHelper.cs" />
     <Compile Include="Common\Users.cs" />
+    <Compile Include="DelBusinessContract_BLL.cs" />
     <Compile Include="DelPurchaseContract_BLL.cs" />
     <Compile Include="DelSaleContract_BLL.cs" />
     <Compile Include="Menu.cs" />
